--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+numpy = "^1.25.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
 pyproject-flake8 = "^6.0.0.post1"
 isort = "^5.12.0"
+pytest = "^7.4.0"
 
 [build-system]
 requires = ["poetry-core"]
