--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ black = "^23.3.0"
 pyproject-flake8 = "^6.0.0.post1"
 isort = "^5.12.0"
 pytest = "^7.4.0"
+pre-commit = "^3.3.3"
 
 [build-system]
 requires = ["poetry-core"]
