--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.flake8]
 max-line-length = 119
 exclude = ".venv"
+ignore = "E203"
 
 [tool.black]
 line-length = 119
