--- a/.github/workflows/format_and_lint_py_files.yaml
+++ b/.github/workflows/format_and_lint_py_files.yaml
@@ -16,8 +16,7 @@ jobs:
           python-version: '3.10'
       - run: pip install poetry
       - run: poetry install
-      - run: poetry run isort . --check-only
-      - run: poetry run black . --check
-      - run: poetry run pflake8
+      - run: poetry run ruff check --fix
+      - run: poetry run ruff format
       - run: poetry run pytest
 
